Bug 168157 - CRASH: pasting twice and undoing
Summary: CRASH: pasting twice and undoing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:26.2.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Undo-Redo Crash
  Show dependency treegraph
 
Reported: 2025-08-28 14:52 UTC by Xisco Faulí
Modified: 2026-04-20 14:33 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (3.22 MB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-08-28 14:52 UTC, Xisco Faulí
Details
sample 2 (904.50 KB, application/msword)
2025-08-28 16:19 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2025-08-28 14:52:23 UTC
Created attachment 202560 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Select all
3. Copy
4. Paste x2
5. Undo x2

-> Crash

Reproduced in

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 09a48f45d9a3e72ab761e6808701362c9c0b2e51
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2025-08-28 14:53:35 UTC
Regression introduced by:

commit 251798c9b4f2ebad447953c3a4b1048e48cd30e3	[log]
author	Méven Car <meven.car@collabora.com>	Fri Aug 08 15:22:31 2025 +0200
committer	Michael Stahl <michael.stahl@collabora.com>	Wed Aug 20 19:21:29 2025 +0200
tree 4a6f418099de4570f8acb8799f4e11b20849e467
parent 6376fe01859a14a22b2601ff04691ceb894c33d4 [diff]

writer: when pasting Copy paragraph style when dest node is "\n"

Bisected with linux64-26.2
Comment 2 Xisco Faulí 2025-08-28 16:19:09 UTC
Created attachment 202561 [details]
sample 2

Another file affected by the same issue
Comment 3 Xisco Faulí 2026-01-13 11:30:49 UTC
Still reproducible in

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 2d68362dac381247081f8a750f3b6d83d9b69ac2
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2026-01-19 08:49:33 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/875a2b85f1428bd442ab51e88c3535ff44fc1676

tdf#168157: Revert "writer: when pasting Copy paragraph style when dest node is "\n""

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2026-01-19 08:49:36 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b0e8042e170fb900bd8f2ab2f561073534c267d6

tdf#168157: sw_uiwriter8: Add test

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2026-01-22 18:55:34 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/4e333ad9294a5a57d719284ec1a7ed65d0fa4d85

tdf#168157: Revert "writer: when pasting Copy paragraph style when dest node is "\n""

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2026-01-22 18:55:37 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/52d9973d835758d44de583b3b13862b5ed557f18

tdf#168157: sw_uiwriter8: Add test

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Shreejana 2026-04-20 13:20:59 UTC
Reproducible with 
Version: 26.2.0.3 (X86_64)
Build ID: 620(Build:3)
CPU threads: 8; OS: Windows 11 X86_64 (build 22631); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

Not reproducible with 
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 8; OS: Windows 11 X86_64 (build 22631); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 9 BogdanB 2026-04-20 14:33:52 UTC
Shreejana, you could try also 26.2.2 on Windows, to be sure it is solved, and then you can mark this bug Verified, instead of Resolved. So, the bug will be Verified/Fixed.