tdf#168157: Revert "writer: when pasting Copy paragraph style when dest node is "\n""

This reverts commit 251798c9b4f2ebad447953c3a4b1048e48cd30e3.

The reverted commit doesn't point to any ticket in Bugzilla/Github,
besides it doesn't have any test covering the fix, so it's very
hard to tell what it tries to fix.
There has not been any response from the author in
https://gerrit.libreoffice.org/c/core/+/189900 or tdf#168157 either,
so reverting it for now before the release of LibreOffice 26.2.

Change-Id: I6ef5b81f33ab38cc180c457f04a238289d4d1513
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197192
Tested-by: Jenkins
Reviewed-by: Dan Williams <dcbw@libreoffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197550